--- a/client/src/sass/mainStyles.scss
+++ b/client/src/sass/mainStyles.scss
@@ -2,30 +2,190 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 * { padding: 0; margin: 0; }
 
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   height: 100%;
-  display: flex;
-  flex-direction: column;
+
 }
 
 body {
-  background-color: #363636;
-  color: white;
+  background-color: white;
+  color: #363636;
   font-family: 'Ubuntu', sans-serif;
 }
 
 .mainContainer {
-    display: flex;
-    flex-direction: row;
-   
-    border: 2px solid pink;
+  display: grid;
+  grid-template-columns: 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33%;
+
 }
 
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) and (min-width: 320px) {
+
+  .menuGrid {
+    grid-area: 2 / 1 / 3 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .headerGrid {
+    grid-area: 1 / 1 / 2 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .contentGrid {
+    grid-area: 3 / 1 / 4 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .footerGrid {
+    grid-area: 4 / 1 / 5 / 13;
+    border: 1px solid red;
+  
+  }
+  
+ 
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 767){
+  
+
+  .menuGrid {
+    grid-area: 1 / 1 / 4 / 3;
+    border: 1px solid red;
+  
+  }
+  
+  .headerGrid {
+    grid-area: 1 / 3 / 2 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .contentGrid {
+    grid-area: 2 / 3 / 4 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .footerGrid {
+    grid-area: 4 / 1 / 5 / 13;
+    border: 1px solid red;
+  
+  }
+  
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  
+
+  .menuGrid {
+    grid-area: 1 / 1 / 4 / 3;
+    border: 1px solid red;
+  
+  }
+  
+  .headerGrid {
+    grid-area: 1 / 3 / 2 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .contentGrid {
+    grid-area: 2 / 3 / 4 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .footerGrid {
+    grid-area: 4 / 1 / 5 / 13;
+    border: 1px solid red;
+  
+  }
+  
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .mainContainer {
+    display: grid;
+    
+    grid-template-columns: 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33%;
+  
+  }}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+  .menuGrid {
+    grid-area: 1 / 1 / 4 / 3;
+    border: 1px solid red;
+  
+  }
+  
+  .headerGrid {
+    grid-area: 1 / 3 / 2 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .contentGrid {
+    grid-area: 2 / 3 / 4 / 13;
+    border: 1px solid red;
+  
+  }
+  
+  .footerGrid {
+    grid-area: 4 / 1 / 5 / 13;
+    border: 1px solid red;
+  
+  }
+   
+}
+
+
+
+/*
+.menuGrid {
+  grid-area: 1 / 1 / 4 / 3;
+  border: 1px solid red;
+
+}
+
+.headerGrid {
+  grid-area: 1 / 3 / 2 / 13;
+  border: 1px solid red;
+
+}
+
+.contentGrid {
+  grid-area: 2 / 3 / 4 / 13;
+  border: 1px solid red;
+
+}
+
+.footerGrid {
+  grid-area: 4 / 1 / 5 / 13;
+  border: 1px solid red;
+
+}
+
+*/
+
 .secondBody {
-    padding: 0 20px;
-    width: 100%;
+  padding: 0;
+  width: 100%;
 }
 
 h3 {
-    margin: 0;
+  margin: 0;
 }
