--- a/client/src/sass/planetCard.scss
+++ b/client/src/sass/planetCard.scss
@@ -1,12 +1,15 @@
+
+
+
 .cardContainer {
     display:flex;
     flex-direction: row;
+    flex-wrap: wrap;
     border: 2px solid red;
-    width: 100%;
 }
 
 .card {
-    width: 400px;
+    width: 380px;
     height: 250px;
     border: 3px solid #ffffff;
     margin: 10px;
