--- a/client/src/sass/planetCard.scss
+++ b/client/src/sass/planetCard.scss
@@ -5,31 +5,71 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border: 2px solid red;
+    padding: 15px;
 }
 
 .card {
-    width: 380px;
-    height: 250px;
+    width: 300px;
+    height: 200px;
     border: 3px solid #ffffff;
     margin: 10px;
+    border: solid rgb(208, 208, 208) 1px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .card img {
     width:100%;
-    height: 165px;
+    height: 135px;
     object-fit: cover;
     margin: 0 auto 10px;
 }
 
 .card p, .card h6{
-    margin: 5px 10px;
+    margin: 0 10px;
 } 
 
 .card h6 {
 font-size: 15px;
+font-family: 'Alfa Slab One', cursive;
+font-weight: 100;
+
 }
 
 .card p {
-font-size: 12px;
+font-size: 10px;
+margin-top: 0;
+}
+
+.pageBrowser{
+    display: flex;
+    flex-direction: row;
+    margin: 10px auto 35px;
+    padding-left: 30px;
+}
+
+.pageBrowser button{
+    background-color: transparent;
+    border: none;
+    margin:3px 20px 0 ;
+}
+
+.loading {
+    background-color: rgba(0, 0, 0, 0.164);
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.loading img {
+    display: block;
+    margin: 130px auto 10px;
+    border-radius: 8px;
+    width: 40%;
+}
+
+.loading p {
+    text-align: center;
+    margin: 0;
 }
