--- a/client/src/sass/mainStyles.scss
+++ b/client/src/sass/mainStyles.scss
@@ -32,7 +32,7 @@ body {
 
 .mainContainer {
   display: grid;
-  grid-template-columns: 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33%;
+  grid-template-columns: 10.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 6.33%;
 
 }
 
@@ -80,34 +80,9 @@ visibility: hidden;
 }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) and (max-width: 767){
-  
-
-  .menuGrid {
-    grid-area: 1 / 1 / 4 / 3;
-  
-  }
-  
-  .headerGrid {
-    grid-area: 1 / 3 / 2 / 13;
-  
-  }
-  
-  .contentGrid {
-    grid-area: 2 / 3 / 4 / 13;
-  
-  }
-  
-  .footerGrid {
-    grid-area: 4 / 1 / 5 / 13;
-  
-  }
-  
-}
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   
 
   .menuGrid {
@@ -132,7 +107,7 @@ visibility: hidden;
   
 }
 
-/* Large devices (laptops/desktops, 992px and up) */
+/* Large devices (laptops/desktops, 992px and up)
 @media only screen and (min-width: 992px) {
   .mainContainer {
     display: grid;
@@ -140,8 +115,8 @@ visibility: hidden;
     grid-template-columns: 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33%;
   
   }}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
+ */
+/* Extra large devices (large laptops and desktops, 1200px and up) 
 @media only screen and (min-width: 1200px) {
 
   .menuGrid {
@@ -166,7 +141,7 @@ visibility: hidden;
    
 }
 
-
+*/
 
 /*
 .menuGrid {
