--- a/client/src/sass/planetCard.scss
+++ b/client/src/sass/planetCard.scss
@@ -5,39 +5,58 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 15px;
+    padding:  5px 15px 15px;
 }
 
 .card {
-    width: 300px;
-    height: 200px;
+    width: 180px;
+    height: 150px;
     border: 3px solid #ffffff;
     margin: 10px;
+    border-radius: 3px;
     border: solid rgb(208, 208, 208) 1px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(45, 75, 77, 0.3) 0px 7px 29px 0px;
+}
+
+.card:hover{
+    border: solid rgb(170, 170, 170) 1px;
+    background-color: rgb(236, 236, 236);
+
 }
 
 .card img {
     width:100%;
-    height: 135px;
+    height: 105px;
     object-fit: cover;
-    margin: 0 auto 10px;
+    margin: 0 auto 0px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 }
 
+.card img:hover{
+    border: solid rgb(170, 170, 170) 1px;
+}
 .card p, .card h6{
     margin: 0 10px;
 } 
 
+.cardInfo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .card h6 {
-font-size: 15px;
+font-size: 12px;
 font-family: 'Alfa Slab One', cursive;
 font-weight: 100;
 
 }
 
-.card p {
-font-size: 10px;
+.cardInfo p {
+font-size: 8px;
 margin-top: 0;
+
 }
 
 .pageBrowser{
@@ -45,6 +64,7 @@ margin-top: 0;
     flex-direction: row;
     margin: 10px auto 35px;
     padding-left: 30px;
+    background-color: azure;
 }
 
 .pageBrowser button{
