--- a/client/src/sass/footer.scss
+++ b/client/src/sass/footer.scss
@@ -1,6 +1,18 @@
 .footer{
+    position: fixed;
+    top: 92vh;
+    width: 100%;
     background-color: black;
     color:white;
     padding: 15px;
-    height: 100%;
+    height: 45px;
+}
+
+@media only screen and (max-width: 600px) {
+    .footer{
+        top: 94vh;
+        height: 65px;
+        font-size: 17px;
+        text-align: center;
+    }
 }
