--- a/client/src/sass/mainStyles.scss
+++ b/client/src/sass/mainStyles.scss
@@ -11,13 +11,18 @@ font-family: 'Ubuntu', sans-serif;
 *::after {
   box-sizing: border-box;
 }
-* { padding: 0; margin: 0; }
+
+* {
+  padding: 0;
+  margin: 0;
+}
 
 * {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 
 }
@@ -30,6 +35,10 @@ body {
 
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 .mainContainer {
   display: grid;
   grid-template-columns: 10.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 6.33%;
@@ -39,72 +48,63 @@ body {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-
   .menuGrid {
     grid-area: 2 / 1 / 3 / 13;
-  
+
   }
-  
+
   .headerGrid {
-    grid-area: 1 / 1 / 2 / 13;
-  
+    grid-area: 3 / 1 / 4 / 13;
+
   }
-  
+
   .contentGrid {
     grid-area: 3 / 1 / 4 / 13;
-  
+
   }
-  
+
   .footerGrid {
     grid-area: 4 / 1 / 5 / 13;
-  
+
   }
-  
- .cardsConatinerTitle{
-  margin: 100px 0 0 60px; 
-  
- }
 
-.form-group, .fg--search{
-  z-index: 0;
-}
+  .cardsConatinerTitle {
+    margin: 70px 0 0;
 
- .searchContainer{
-margin: 0 30px 0;
-z-index: -1;
-visibility: hidden;
+  }
+
+
+
+ 
 }
 
-.cardContainer{
-  margin-left: 6%;
-}
-}
+
 
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 600px) {
-  
+
 
   .menuGrid {
     grid-area: 1 / 1 / 4 / 3;
-  
+
   }
-  
+
   .headerGrid {
     grid-area: 1 / 3 / 2 / 13;
-  
+
   }
-  
+
   .contentGrid {
     grid-area: 2 / 3 / 4 / 13;
-  
+
   }
-  
+
   .footerGrid {
     grid-area: 4 / 1 / 5 / 13;
-  
+
   }
-  
+
 }
 
 /* Large devices (laptops/desktops, 992px and up)
