--- a/client/src/sass/menu.scss
+++ b/client/src/sass/menu.scss
@@ -5,6 +5,7 @@
     padding: 5px;
     background-color: #e8e8e8;
     margin: 0;
+    min-height:  92vh;
     height: 100%;
 
 }
@@ -55,7 +56,7 @@ margin: 0 auto;
 }
 
 .menumobile {
-    visibility: visible;}
+    display: none;}
 
 .menuBtn {
     border:#363636 solid 3px;
@@ -66,46 +67,47 @@ margin: 0 auto;
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 730px) and (min-width: 320px) {
+@media only screen and (max-width: 600px) {
     
-.menu {
+.html {
     width: 100%;
-    padding: 20px;
-    background-color: #e8e8e8;
-    margin: 0;
-    height: 80px;
-    position: fixed;
-
 }
-
-.menuList span {
-   margin-right: 10px;
-}
-
-.menuList img {
-    position: absolute;  
-    width: 40px;
-    margin-left: 80%;
-    display: inline;
-}
-
-.menumobile {
-    visibility: visible;
-    position: absolute;
-    top:85px;
-    left: 30%;
+.menu {
+    min-height: 50px;
+    width: 100%;
 }
 
 .menudesktop {
-    visibility: hidden;
+    display:none;
+   }
+
+.menuBig{
+    display:none;
 }
 
-.menuList h3 {
-    text-align: center;
-    font-size: 35px;
-    margin: 0 auto;
-    text-align: center;
-    color: #ff9478;
+.menumobile {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width:100%;
 }
+.menumobile img {
+  width: 35px;
+  display: block;
+  margin: 2px 0 0 35px;
+}
+
+.menumobile h3{
+    color: #363636;
+    font-weight: 100;
+    font-family: 'Alfa Slab One', cursive;
+    font-size: 20px;
+    margin: 7px 0 0
+}
+
+.menudesktop {
+ display:none;
+}
+
 
 }
