--- a/client/src/sass/planetCard.scss
+++ b/client/src/sass/planetCard.scss
@@ -6,16 +6,20 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding:  5px 15px 15px;
+    overflow-y: scroll;
+    max-height: 62vh;
 }
 
 .card {
     width: 180px;
-    height: 150px;
+    height: 120px;
     border: 3px solid #ffffff;
     margin: 10px;
     border-radius: 3px;
     border: solid rgb(208, 208, 208) 1px;
-    box-shadow: rgba(45, 75, 77, 0.3) 0px 7px 29px 0px;
+    //box-shadow: rgba(45, 75, 77, 0.3) 0px 7px 29px 0px;
+    //box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .card:hover{
@@ -26,7 +30,7 @@
 
 .card img {
     width:100%;
-    height: 105px;
+    height: 78px;
     object-fit: cover;
     margin: 0 auto 0px;
     border-top-left-radius: 2px;
@@ -44,17 +48,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 4px;
 }
 
 .card h6 {
-font-size: 12px;
+font-size: 10px;
 font-family: 'Alfa Slab One', cursive;
 font-weight: 100;
 
 }
 
-.cardInfo p {
-font-size: 8px;
+.cardInfo p, .cardInfoComets {
+font-size: 7px;
 margin-top: 0;
 
 }
@@ -62,17 +67,37 @@ margin-top: 0;
 .pageBrowser{
     display: flex;
     flex-direction: row;
-    margin: 10px auto 35px;
-    padding-left: 30px;
-    background-color: azure;
+    margin: 10px auto;
+    align-content: center;
+    background-color: white;
+    border-radius: 3px;
+    width: fit-content;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border: 0.1px solid rgb(238, 238, 238);
+
 }
 
 .pageBrowser button{
     background-color: transparent;
     border: none;
-    margin:3px 20px 0 ;
+    margin:3px 25px 0 ;
+    color: #e0634b;
+    font-size: 12px;
 }
 
+.pageBrowser p {    
+    font-size: 10px;
+    margin-top: 3px;
+    font-weight: 600;
+}
+
+.pageBrowserContainer{
+    background-color: transparent;
+    position: fixed;
+    left: 40vw;
+    bottom: 40px;
+    z-index: 3;
+}
 .loading {
     background-color: rgba(0, 0, 0, 0.164);
     position: absolute;
@@ -92,4 +117,53 @@ margin-top: 0;
 .loading p {
     text-align: center;
     margin: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    
+.cardContainer {
+    padding:  5px 15px 15px;
+    max-height: 65vh;
+}
+
+.card {
+    width: 390px;
+    height: 265px;
+    margin: 10px;
+}
+
+
+.card img {
+    height: 178px;
+}
+
+.card p, .card h6{
+    margin: 0 10px;
+} 
+
+.card h6 {
+font-size: 24px;
+
+}
+
+.cardInfo p, .cardInfoComets {
+font-size: 16px;
+}
+
+
+.pageBrowser button{
+    font-size: 28px;
+}
+
+.pageBrowser p {    
+    font-size: 22px;
+}
+
+.pageBrowserContainer{
+    bottom: 60px;
+    left:17%;
+}
+
+
+
 }
