--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -7,3 +7,6 @@
 @import "./planetCard.scss";
 @import "./mobileMenu.scss";
 @import "./footer.scss";
+@import "./bigCard.scss";
+@import "./graphicBar.scss";
+@import "./error404.scss";
