--- a/client/src/sass/search.scss
+++ b/client/src/sass/search.scss
@@ -77,6 +77,7 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 10px;
     font-size: 12px;
+    z-index: 6;
   }
 
   /* Extra small devices (phones, 600px and down) */
@@ -107,7 +108,6 @@
   
   .fg--search button {
    display: none;
-   z-index:0;
   }
   
 
@@ -120,9 +120,21 @@
   .searchList{
     border: 2px rgb(186, 186, 186) solid;
     position: absolute;
+    left: 35px;
     background-color: white;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 10px;
-    font-size: 12px;
+    padding: 10px 20px;
+    font-size: 16px;
+    max-height: 400px;
+    overflow-y: scroll;
+    z-index: 7;
+    width: 200px
   }
+
+  .searchContainer{
+    width: fit-content;
+    margin: 0 6% 10px;
+    display: flex;
+    flex-direction: row;
+}
 }
