Finished info window, links, last details in style checked

--- a/client/src/sass/styles.scss
+++ b/client/src/sass/styles.scss
@@ -3,10 +3,10 @@
 @import "./header.scss";
 @import "./menu.scss";
 @import "./search.scss";
-@import "./filter.scss";
 @import "./planetCard.scss";
 @import "./mobileMenu.scss";
 @import "./footer.scss";
 @import "./bigCard.scss";
 @import "./graphicBar.scss";
 @import "./error404.scss";
+@import "./info.scss";
