--- a/client/src/sass/header.scss
+++ b/client/src/sass/header.scss
@@ -8,10 +8,10 @@
 
 .headerIcons {
 text-align: right;
-font-size:30px;
+font-size:40px;
 color: #e0634b;
-padding-top: 12px;
-margin-right: 50px;
+padding-top: 40px;
+margin-right: 15%;
 }
 
 .headerIcons p {
@@ -30,25 +30,24 @@ height: 35px;
 .underLine{
     position: relative;
     left: 27px;
-    bottom: 42px;
+    bottom: 49px;
     width: 250px;
-    height: 10px;
+    height: 12px;
     background-color: #f9c280;
     z-index: -1;
 }
 
 .headerTitles h1 {
-    font-size: 20px;
+    font-size: 35px;
     color: #27536b;
- /*color:rgb(33, 33, 33);*/
     font-weight: 400;
-    margin-top: 10px;
+    margin-top: 40px;
     padding: 0;
     font-family: 'Alfa Slab One', cursive;
 }
 
 .headerTitles h3 {
-    font-size: 35px;
+    font-size: 15px;
     margin-bottom: 0;
     padding: 0;
 }
