--- a/client/src/sass/mainStyles.scss
+++ b/client/src/sass/mainStyles.scss
@@ -45,6 +45,15 @@ body {
 
 }
 
+.headerGrid {
+  max-height: 100px;
+}
+
+.cardsConatinerTitle {
+  margin: 30px 0 0;
+
+}
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -69,7 +78,7 @@ body {
   }
 
   .cardsConatinerTitle {
-    margin: 70px 0 0;
+    margin: 20px 0 0;
 
   }
 
@@ -91,12 +100,12 @@ body {
   }
 
   .headerGrid {
-    grid-area: 1 / 3 / 2 / 13;
+    grid-area: 1 / 3 / 3 / 13;
 
   }
 
   .contentGrid {
-    grid-area: 2 / 3 / 4 / 13;
+    grid-area: 3 / 3 / 4 / 13;
 
   }
 
@@ -112,6 +121,7 @@ body {
 .secondBody {
   padding: 0;
   width: 100%;
+  margin-top: 0;
 }
 
 h3 {
