--- a/client/src/sass/menu.scss
+++ b/client/src/sass/menu.scss
@@ -5,7 +5,7 @@
     padding: 5px;
     background-color: #e8e8e8;
     margin: 0;
-    min-height: 90vh;
+    min-height: 92vh;
 }
 
 .menuList {
@@ -21,14 +21,14 @@
 .menuList img {
     width: 50%;
     margin-left: 25%;
-    margin-bottom: 20px;
-    margin-top: 35px;
+    margin-bottom: 15%;
+    margin-top: 45px;
 }
 
 .menuList h3 {
     text-align: center;
     font-size: 35px;
-    margin: 0 0 50px;
+    margin: 0 0 20px;
     color: #363636;
     font-weight: 100;
     font-family: 'Alfa Slab One', cursive;
@@ -41,10 +41,10 @@ margin: 0 auto;
 }
 
 .menuList p {
-    margin-bottom: 0;
+    margin-bottom: 12px;
     padding: 5px 15px 10px;
     border-radius: 5px;
-    font-size: 10px;
+    font-size: 18px;
 }
 
 .menuList p:hover {
