--- a/client/src/sass/info.scss
+++ b/client/src/sass/info.scss
@@ -7,51 +7,53 @@
     display: block;
     width: 30px;
     height: 30px;
-    
+
 }
 
 .infoFlags div {
-   border: 3px solid;
-   margin: 8px 10px 0 5px;
-   padding: 5px;
-   border-radius: 20px;
+    border: 3px solid;
+    margin: 8px 10px 0 5px;
+    padding: 5px;
+    border-radius: 20px;
 }
 
-.infoBody{
-    margin: 20px 5% 20px;
+.infoBody {
+    margin: 20px 5% 5px;
     max-height: 80vh;
     overflow-y: scroll;
 }
 
-.infoBody h3{
+.infoBody h3 {
     margin-bottom: 10px;
     font-size: 35px;
     color: #27536b;
 }
 
-.infoBody h4{
+.infoBody h4 {
     margin: 15px 0 8px;
     color: #27536b;
     font-size: 20px;
 }
-.infoBody p{
+
+.infoBody p {
     font-size: 16px;
     line-height: 1.2;
 }
 
-.infoBody ul{
+.infoBody ul {
     font-size: 16px;
     line-height: 1.2;
 }
 
 li {
-margin: 0 0 7px 10px;
+    margin: 0 0 7px 10px;
 }
 
-li ul li{
+li ul li {
     margin: 4px 0 3px 10px;
 }
-.infoBody span{
+
+.infoBody span {
     background-color: #ffeb99;
 }
 
@@ -60,25 +62,49 @@ li ul li{
 }
 
 @media only screen and (max-width: 600px) {
-    
-.infoBody h3{
-    margin-bottom: 10px;
-    font-size: 30px;
-    color: #27536b;
-}
 
-.infoBody h4{
-    margin: 25px 0 14px;
-    color: #27536b;
-    font-size: 15px;
-}
-.infoBody p{
-    font-size: 14px;
-    line-height: 1.2;
-}
+    .infoBody {
+        margin: 0 0 5px;
+        max-height: 80vh;
+        overflow-y: scroll;
+    }
 
-.infoBody ul{
-    font-size: 14px;
-    line-height: 1.2;
-}
+    .infoBody h3 {
+        margin-bottom: 5px;
+        font-size: 20px;
+        color: #27536b;
+    }
+
+    .infoBody h4 {
+        margin: 25px 0 8px;
+        color: #27536b;
+        font-size: 15px;
+    }
+
+    .infoBody p {
+        font-size: 13px;
+        line-height: 1.2;
+    }
+
+    .infoBody ul {
+        font-size: 13px;
+        line-height: 1.2;
+    }
+
+
+    .infoFlags img {
+        display: block;
+        width: 20px;
+        height: 20px;
+
+    }
+
+
+    .infoFlags div {
+        border: 3px solid;
+        margin: 8px 10px 0 5px;
+        padding: 5px;
+        border-radius: 20px;
+        height: fit-content;
+    }
 }
