--- a/client/src/sass/planetCard.scss
+++ b/client/src/sass/planetCard.scss
@@ -188,7 +188,7 @@ font-size: 14px;
 }
 
 .pageBrowserContainer{
-    bottom: 70px;
+    bottom: 50px;
     left:15%;
 }
 
@@ -197,4 +197,5 @@ font-size: 14px;
    font-size: 30px;
    bottom: 160px;
     left:288px;
+}
 }
