--- a/client/src/sass/search.scss
+++ b/client/src/sass/search.scss
@@ -73,7 +73,10 @@
 
 
 .cardsConatinerTitle h3{
-    font-size: 35px;
+  margin: 0 10px 0 30px;
+  font-family: 'Alfa Slab One', cursive;
+  font-weight: 100;
+  font-size: 35px;
 }
 
 .searchBox {
