--- a/client/src/sass/mainStyles.scss
+++ b/client/src/sass/mainStyles.scss
@@ -42,7 +42,6 @@ body {
 .mainContainer {
   display: grid;
   grid-template-columns: 10.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 8.33% 6.33%;
-
 }
 
 .headerGrid {
@@ -64,8 +63,16 @@ body {
 
   .headerGrid {
     grid-area: 3 / 1 / 4 / 13;
-
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    top: 43px;
+    width: 100%;
+    z-index: 9;
+    max-height: 200px;
+    height: 70px;
   }
+
+
 
   .contentGrid {
     grid-area: 4 / 1 / 5 / 13;
@@ -78,11 +85,9 @@ body {
   }
 
   .cardsConatinerTitle {
-    margin: 5px 0 0;
+    margin: 105px 0 0;
 
   }
-
-
 
  
 }
